# nutrition-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: agents.py  main.py  models.py  tools.py
tests/: test_agents.py  test_models.py
