[project]
name = "ai-agent"
version = "0.1.0"
description = "An intelligent AI-powered nutritionist agent that generates personalized recipes based on physical profile, fitness goals, and dietary restrictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "logfire>=4.16.0",
    "pydantic-ai>=1.39.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
]
